--- a/Pandas_conditional_Filter_stack_Data.ipynb
+++ b/Pandas_conditional_Filter_stack_Data.ipynb
@@ -1498,7 +1498,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "high_salery = df[\"ConvertedComp\"] >70000"
+    "high_sala = df[\"ConvertedComp\"] >70000"
    ]
   },
   {
@@ -3250,7 +3250,7 @@
     }
    ],
    "source": [
-    "df[high_salery]"
+    "df[high_salary]"
    ]
   },
   {
