--- a/Pandas_conditional_Filter_stack_Data.ipynb
+++ b/Pandas_conditional_Filter_stack_Data.ipynb
@@ -3394,7 +3394,7 @@
     }
    ],
    "source": [
-    "df.loc[high_salery,['LanguageWorkedWith','ConvertedComp','Country']]"
+    "df.loc[high_salary,['LanguageWorkedWith','ConvertedComp','Country']]"
    ]
   },
   {
