--- a/Pandas_conditional_Filter_stack_Data.ipynb
+++ b/Pandas_conditional_Filter_stack_Data.ipynb
@@ -1494,19 +1494,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [],
    "source": [
-    "high_sala = df[\"ConvertedComp\"] >70000"
+    "high_salary = df[\"ConvertedComp\"] >70000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 149,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3244,7 +3242,7 @@
        "[22289 rows x 85 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3255,10 +3253,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 150,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -3388,7 +3384,7 @@
        "[22289 rows x 3 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3399,7 +3395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3409,10 +3405,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 152,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -5137,7 +5131,7 @@
        "[33951 rows x 85 columns]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 152,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5148,38 +5142,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
-    "fill = df['LanguageWorkedWith'].str.contains('Python',na=False)"
+    "fill = df['LanguageWorkedWith'].str.contains('Bash/Shell/PowerShell',na=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 185,
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                          HTML/CSS;Java;JavaScript;Python\n",
-       "1                                      C++;HTML/CSS;Python\n",
-       "2                                                 HTML/CSS\n",
-       "3                                      C;C++;C#;Python;SQL\n",
-       "4              C++;HTML/CSS;Java;JavaScript;Python;SQL;VBA\n",
+       "7        Bash/Shell/PowerShell;C;C++;HTML/CSS;Java;Java...\n",
+       "8        Bash/Shell/PowerShell;C#;HTML/CSS;JavaScript;P...\n",
+       "11        Bash/Shell/PowerShell;HTML/CSS;Java;Python;R;SQL\n",
+       "12       Bash/Shell/PowerShell;HTML/CSS;JavaScript;PHP;...\n",
+       "14       Assembly;Bash/Shell/PowerShell;C;C++;HTML/CSS;...\n",
        "                               ...                        \n",
-       "88875                             HTML/CSS;Java;JavaScript\n",
-       "88876                           HTML/CSS;JavaScript;Python\n",
+       "88864        Bash/Shell/PowerShell;C++;HTML/CSS;JavaScript\n",
+       "88865      Bash/Shell/PowerShell;HTML/CSS;Python;Other(s):\n",
+       "88871    Assembly;Bash/Shell/PowerShell;C;C#;HTML/CSS;J...\n",
        "88877    Bash/Shell/PowerShell;Go;HTML/CSS;JavaScript;W...\n",
-       "88878                        HTML/CSS;JavaScript;Other(s):\n",
        "88882    Bash/Shell/PowerShell;HTML/CSS;Java;JavaScript...\n",
-       "Name: LanguageWorkedWith, Length: 71988, dtype: object"
+       "Name: LanguageWorkedWith, Length: 31991, dtype: object"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 185,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5190,62 +5182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "222      Go\n",
-       "7704     Go\n",
-       "9711     Go\n",
-       "11704    Go\n",
-       "15446    Go\n",
-       "28151    Go\n",
-       "29960    Go\n",
-       "31433    Go\n",
-       "37013    Go\n",
-       "38230    Go\n",
-       "38492    Go\n",
-       "39695    Go\n",
-       "40807    Go\n",
-       "48995    Go\n",
-       "51218    Go\n",
-       "52399    Go\n",
-       "52408    Go\n",
-       "55767    Go\n",
-       "56253    Go\n",
-       "63772    Go\n",
-       "63784    Go\n",
-       "64058    Go\n",
-       "64946    Go\n",
-       "65604    Go\n",
-       "66658    Go\n",
-       "68361    Go\n",
-       "74001    Go\n",
-       "74540    Go\n",
-       "74654    Go\n",
-       "76339    Go\n",
-       "78227    Go\n",
-       "86299    Go\n",
-       "88667    Go\n",
-       "Name: LanguageWorkedWith, dtype: object"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.loc[df['LanguageWorkedWith'] == 'Go','LanguageWorkedWith']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [
     {
@@ -5254,7 +5191,7 @@
        "'Bash/Shell/PowerShell;HTML/CSS;Java;SQL'"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 156,
      "metadata": {},
      "output_type": "execute_result"
     }
