--- a/Pandas_Modify_Data.ipynb
+++ b/Pandas_Modify_Data.ipynb
@@ -425,7 +425,7 @@
    "outputs": [],
    "source": [
     "#  df.email = [Email]\n",
-    "# we can't change any columns like this "
+    "# we can't change any columns like this,if we try we got error."
    ]
   },
   {
