--- a/Pandas_Modify_Data.ipynb
+++ b/Pandas_Modify_Data.ipynb
@@ -103,16 +103,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.columns = [\"First_name\",\"Last_name\",\"Email\"]"
+    "df.columns = [\"First_name\",\"Last_name\",\"Email\"]\n",
+    "# for all columns change if you miss one you got error"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +172,7 @@
        "2     Rajesh  Kushwaha        Kush@gmail.com"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +251,7 @@
        "2     Rajesh  Kushwaha        Kush@gmail.com"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +330,7 @@
        "2     Rajesh  Kushwaha        Kush@gmail.com"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,12 +341,181 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = df.columns.str.replace(\"_\",\" \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first name</th>\n",
+       "      <th>last name</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Keshav</td>\n",
+       "      <td>Sharma</td>\n",
+       "      <td>Kesh4118@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rahul</td>\n",
+       "      <td>Sharma</td>\n",
+       "      <td>Rahul81.rs@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rajesh</td>\n",
+       "      <td>Kushwaha</td>\n",
+       "      <td>Kush@gmail.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first name last name                 email\n",
+       "0     Keshav    Sharma    Kesh4118@gmail.com\n",
+       "1      Rahul    Sharma  Rahul81.rs@gmail.com\n",
+       "2     Rajesh  Kushwaha        Kush@gmail.com"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns = df.columns.str.replace(\" \",\"_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first_name</th>\n",
+       "      <th>last_name</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Keshav</td>\n",
+       "      <td>Sharma</td>\n",
+       "      <td>Kesh4118@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Rahul</td>\n",
+       "      <td>Sharma</td>\n",
+       "      <td>Rahul81.rs@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rajesh</td>\n",
+       "      <td>Kushwaha</td>\n",
+       "      <td>Kush@gmail.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  first_name last_name                 email\n",
+       "0     Keshav    Sharma    Kesh4118@gmail.com\n",
+       "1      Rahul    Sharma  Rahul81.rs@gmail.com\n",
+       "2     Rajesh  Kushwaha        Kush@gmail.com"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  df.email = [Email]\n",
+    "# we can't Update particular columns like this,if we try we have to face error."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df.columns = df.columns.str.replace(\"_\",\" \")\n",
-    "df.columns = df.columns.str.replace(\" \",\"_\")"
+    "df.rename(columns={\"first_name\": \"first\",\"last_name\":\"last\"},inplace=True)\n",
+    "#In raname mathod we prasent column name as key and updating column name as value in dicsionary\n",
+    "# inplace use for parmanent changes"
    ]
   },
   {
@@ -374,8 +544,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>last_name</th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
        "      <th>email</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -403,10 +573,10 @@
        "</div>"
       ],
       "text/plain": [
-       "  first_name last_name                 email\n",
-       "0     Keshav    Sharma    Kesh4118@gmail.com\n",
-       "1      Rahul    Sharma  Rahul81.rs@gmail.com\n",
-       "2     Rajesh  Kushwaha        Kush@gmail.com"
+       "    first      last                 email\n",
+       "0  Keshav    Sharma    Kesh4118@gmail.com\n",
+       "1   Rahul    Sharma  Rahul81.rs@gmail.com\n",
+       "2  Rajesh  Kushwaha        Kush@gmail.com"
       ]
      },
      "execution_count": 28,
@@ -424,24 +594,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#  df.email = [Email]\n",
-    "# we can't change any columns like this,if we try we got error."
+    "#  Rows Modification "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.rename(columns={'first_name':'First','email':'Email'},inplace=True)\n",
-    "\n",
-    "# inplace use for parmanent changes"
+    "df.loc[1]=[\"anchal\",\"Dubay\",\"anchu@gmail.com\"]\n",
+    "# we changed a row "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -465,9 +633,9 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>First</th>\n",
-       "      <th>last_name</th>\n",
-       "      <th>Email</th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -479,9 +647,9 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Rahul</td>\n",
-       "      <td>Sharma</td>\n",
-       "      <td>Rahul81.rs@gmail.com</td>\n",
+       "      <td>anchal</td>\n",
+       "      <td>Dubay</td>\n",
+       "      <td>anchu@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -494,19 +662,29 @@
        "</div>"
       ],
       "text/plain": [
-       "    First last_name                 Email\n",
-       "0  Keshav    Sharma    Kesh4118@gmail.com\n",
-       "1   Rahul    Sharma  Rahul81.rs@gmail.com\n",
-       "2  Rajesh  Kushwaha        Kush@gmail.com"
+       "    first      last               email\n",
+       "0  Keshav    Sharma  Kesh4118@gmail.com\n",
+       "1  anchal     Dubay     anchu@gmail.com\n",
+       "2  Rajesh  Kushwaha      Kush@gmail.com"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# now we will change a particular part\n",
+    "df.loc[1,['last','email']]=[\"ali\",'Aali@gmail.com']"
    ]
   },
   {
@@ -535,8 +713,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>last_name</th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
        "      <th>email</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -549,25 +727,25 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Rahul</td>\n",
-       "      <td>Sharma</td>\n",
-       "      <td>Rahul81.rs@gmail.com</td>\n",
+       "      <td>anchal</td>\n",
+       "      <td>ali</td>\n",
+       "      <td>Aali@gmail.com</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Rajesh</td>\n",
-       "      <td>Kushwaha</td>\n",
-       "      <td>Kush@gmail.com</td>\n",
+       "      <td>das</td>\n",
+       "      <td>Adas@gmail.com</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  first_name last_name                 email\n",
-       "0     Keshav    Sharma    Kesh4118@gmail.com\n",
-       "1      Rahul    Sharma  Rahul81.rs@gmail.com\n",
-       "2     Rajesh  Kushwaha        Kush@gmail.com"
+       "    first    last               email\n",
+       "0  Keshav  Sharma  Kesh4118@gmail.com\n",
+       "1  anchal     ali      Aali@gmail.com\n",
+       "2  Rajesh     das      Adas@gmail.com"
       ]
      },
      "execution_count": 47,
@@ -576,18 +754,88 @@
     }
    ],
    "source": [
-    "df.columns = [\"First_name\",\"Last_name\",\"Email\"]\n",
-    "df.columns = [x.lower() for x in df.columns]\n",
-    "df\n",
-    "#back to previews stat"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# we can use .at function also insteat of uning .loc\n",
+    "df.at[1,['last','email']]=['das','Adas@gmail.com']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>first</th>\n",
+       "      <th>last</th>\n",
+       "      <th>email</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Keshav</td>\n",
+       "      <td>Sharma</td>\n",
+       "      <td>Kesh4118@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>anchal</td>\n",
+       "      <td>das</td>\n",
+       "      <td>Adas@gmail.com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Rajesh</td>\n",
+       "      <td>Kushwaha</td>\n",
+       "      <td>kush@gmail.com</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    first      last               email\n",
+       "0  Keshav    Sharma  Kesh4118@gmail.com\n",
+       "1  anchal       das      Adas@gmail.com\n",
+       "2  Rajesh  Kushwaha      kush@gmail.com"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   },
   {
    "cell_type": "code",
