--- a/Grouping_and_ Aggregating.ipynb
+++ b/Grouping_and_ Aggregating.ipynb
@@ -962,6 +962,148 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Respondent</th>\n",
+       "      <th>CompTotal</th>\n",
+       "      <th>ConvertedComp</th>\n",
+       "      <th>WorkWeekHrs</th>\n",
+       "      <th>CodeRevHrs</th>\n",
+       "      <th>Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>88883.000000</td>\n",
+       "      <td>5.594500e+04</td>\n",
+       "      <td>5.582300e+04</td>\n",
+       "      <td>64503.000000</td>\n",
+       "      <td>49790.000000</td>\n",
+       "      <td>79210.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>44442.000000</td>\n",
+       "      <td>5.519014e+11</td>\n",
+       "      <td>1.271107e+05</td>\n",
+       "      <td>42.127197</td>\n",
+       "      <td>5.084308</td>\n",
+       "      <td>30.336699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>25658.456325</td>\n",
+       "      <td>7.331926e+13</td>\n",
+       "      <td>2.841523e+05</td>\n",
+       "      <td>37.287610</td>\n",
+       "      <td>5.513931</td>\n",
+       "      <td>9.178390</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>22221.500000</td>\n",
+       "      <td>2.000000e+04</td>\n",
+       "      <td>2.577750e+04</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "      <td>24.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>44442.000000</td>\n",
+       "      <td>6.200000e+04</td>\n",
+       "      <td>5.728700e+04</td>\n",
+       "      <td>40.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>29.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>66662.500000</td>\n",
+       "      <td>1.200000e+05</td>\n",
+       "      <td>1.000000e+05</td>\n",
+       "      <td>44.750000</td>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>35.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>88883.000000</td>\n",
+       "      <td>1.000000e+16</td>\n",
+       "      <td>2.000000e+06</td>\n",
+       "      <td>4850.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "      <td>99.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Respondent     CompTotal  ConvertedComp   WorkWeekHrs    CodeRevHrs  \\\n",
+       "count  88883.000000  5.594500e+04   5.582300e+04  64503.000000  49790.000000   \n",
+       "mean   44442.000000  5.519014e+11   1.271107e+05     42.127197      5.084308   \n",
+       "std    25658.456325  7.331926e+13   2.841523e+05     37.287610      5.513931   \n",
+       "min        1.000000  0.000000e+00   0.000000e+00      1.000000      0.000000   \n",
+       "25%    22221.500000  2.000000e+04   2.577750e+04     40.000000      2.000000   \n",
+       "50%    44442.000000  6.200000e+04   5.728700e+04     40.000000      4.000000   \n",
+       "75%    66662.500000  1.200000e+05   1.000000e+05     44.750000      6.000000   \n",
+       "max    88883.000000  1.000000e+16   2.000000e+06   4850.000000     99.000000   \n",
+       "\n",
+       "                Age  \n",
+       "count  79210.000000  \n",
+       "mean      30.336699  \n",
+       "std        9.178390  \n",
+       "min        1.000000  \n",
+       "25%       24.000000  \n",
+       "50%       29.000000  \n",
+       "75%       35.000000  \n",
+       "max       99.000000  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
