Most use Social meadia site with value_counts(normalize=True)

--- a/Grouping_and_ Aggregating.ipynb
+++ b/Grouping_and_ Aggregating.ipynb
@@ -1104,10 +1104,117 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0            NaN\n",
+       "1            NaN\n",
+       "2         8820.0\n",
+       "3        61000.0\n",
+       "4            NaN\n",
+       "          ...   \n",
+       "88878        NaN\n",
+       "88879        NaN\n",
+       "88880        NaN\n",
+       "88881        NaN\n",
+       "88882        NaN\n",
+       "Name: ConvertedComp, Length: 88883, dtype: float64"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ConvertedComp']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55823"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['ConvertedComp'].count()\n",
+    "#hear is the no. of responses except NaN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Yes\n",
+       "1         No\n",
+       "2        Yes\n",
+       "3         No\n",
+       "4        Yes\n",
+       "        ... \n",
+       "88878    Yes\n",
+       "88879     No\n",
+       "88880     No\n",
+       "88881     No\n",
+       "88882    Yes\n",
+       "Name: Hobbyist, Length: 88883, dtype: object"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Hobbyist']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Yes    71257\n",
+       "No     17626\n",
+       "Name: Hobbyist, dtype: int64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Hobbyist'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['SocialMedia']"
+   ]
   }
  ],
  "metadata": {
