--- a/Working_With_Date_and_Time_Series.ipynb
+++ b/Working_With_Date_and_Time_Series.ipynb
@@ -187,10 +187,322 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Friday'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[0,'Date'].day_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Date'] = pd.to_datetime(df['Date'],format= '%Y-%m-%d %I-%p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       2020-03-13 20:00:00\n",
+       "1       2020-03-13 19:00:00\n",
+       "2       2020-03-13 18:00:00\n",
+       "3       2020-03-13 17:00:00\n",
+       "4       2020-03-13 16:00:00\n",
+       "                ...        \n",
+       "23669   2017-07-01 15:00:00\n",
+       "23670   2017-07-01 14:00:00\n",
+       "23671   2017-07-01 13:00:00\n",
+       "23672   2017-07-01 12:00:00\n",
+       "23673   2017-07-01 11:00:00\n",
+       "Name: Date, Length: 23674, dtype: datetime64[ns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Date']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Friday'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[ 0,'Date'].day_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          Friday\n",
+       "1          Friday\n",
+       "2          Friday\n",
+       "3          Friday\n",
+       "4          Friday\n",
+       "           ...   \n",
+       "23669    Saturday\n",
+       "23670    Saturday\n",
+       "23671    Saturday\n",
+       "23672    Saturday\n",
+       "23673    Saturday\n",
+       "Name: Date, Length: 23674, dtype: object"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Date'].dt.day_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"DayOfTheWeek\"] = df['Date'].dt.day_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Symbol</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>DayOfTheWeek</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2020-03-13 20:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>129.94</td>\n",
+       "      <td>...</td>\n",
+       "      <td>128.71</td>\n",
+       "      <td>1940673.93</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-03-13 19:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>119.51</td>\n",
+       "      <td>...</td>\n",
+       "      <td>129.94</td>\n",
+       "      <td>7579741.09</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-03-13 18:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.47</td>\n",
+       "      <td>...</td>\n",
+       "      <td>119.51</td>\n",
+       "      <td>4898735.81</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-03-13 17:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.08</td>\n",
+       "      <td>...</td>\n",
+       "      <td>124.47</td>\n",
+       "      <td>2753450.92</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-03-13 16:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>124.85</td>\n",
+       "      <td>...</td>\n",
+       "      <td>124.08</td>\n",
+       "      <td>4461424.71</td>\n",
+       "      <td>Friday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23669</th>\n",
+       "      <td>2017-07-01 15:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>265.74</td>\n",
+       "      <td>...</td>\n",
+       "      <td>272.57</td>\n",
+       "      <td>1500282.55</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23670</th>\n",
+       "      <td>2017-07-01 14:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>268.79</td>\n",
+       "      <td>...</td>\n",
+       "      <td>265.74</td>\n",
+       "      <td>1702536.85</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23671</th>\n",
+       "      <td>2017-07-01 13:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>274.83</td>\n",
+       "      <td>...</td>\n",
+       "      <td>268.79</td>\n",
+       "      <td>3010787.99</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23672</th>\n",
+       "      <td>2017-07-01 12:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>275.01</td>\n",
+       "      <td>...</td>\n",
+       "      <td>274.83</td>\n",
+       "      <td>824362.87</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23673</th>\n",
+       "      <td>2017-07-01 11:00:00</td>\n",
+       "      <td>ETHUSD</td>\n",
+       "      <td>279.98</td>\n",
+       "      <td>...</td>\n",
+       "      <td>275.01</td>\n",
+       "      <td>679358.87</td>\n",
+       "      <td>Saturday</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>23674 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Date  Symbol    Open  ...   Close      Volume  \\\n",
+       "0     2020-03-13 20:00:00  ETHUSD  129.94  ...  128.71  1940673.93   \n",
+       "1     2020-03-13 19:00:00  ETHUSD  119.51  ...  129.94  7579741.09   \n",
+       "2     2020-03-13 18:00:00  ETHUSD  124.47  ...  119.51  4898735.81   \n",
+       "3     2020-03-13 17:00:00  ETHUSD  124.08  ...  124.47  2753450.92   \n",
+       "4     2020-03-13 16:00:00  ETHUSD  124.85  ...  124.08  4461424.71   \n",
+       "...                   ...     ...     ...  ...     ...         ...   \n",
+       "23669 2017-07-01 15:00:00  ETHUSD  265.74  ...  272.57  1500282.55   \n",
+       "23670 2017-07-01 14:00:00  ETHUSD  268.79  ...  265.74  1702536.85   \n",
+       "23671 2017-07-01 13:00:00  ETHUSD  274.83  ...  268.79  3010787.99   \n",
+       "23672 2017-07-01 12:00:00  ETHUSD  275.01  ...  274.83   824362.87   \n",
+       "23673 2017-07-01 11:00:00  ETHUSD  279.98  ...  275.01   679358.87   \n",
+       "\n",
+       "       DayOfTheWeek  \n",
+       "0            Friday  \n",
+       "1            Friday  \n",
+       "2            Friday  \n",
+       "3            Friday  \n",
+       "4            Friday  \n",
+       "...             ...  \n",
+       "23669      Saturday  \n",
+       "23670      Saturday  \n",
+       "23671      Saturday  \n",
+       "23672      Saturday  \n",
+       "23673      Saturday  \n",
+       "\n",
+       "[23674 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "|"
+   ]
   }
  ],
  "metadata": {
